dev/test_programs/INVALID/group1/stmt13.go
package main;

func main(){
	var _ int = 1;
	var x int;
	x += _;
}
